@@ -5,6 +5,6 @@ public class EntityNotFoundException extends EventuateClientException {
   }
 
   public EntityNotFoundException(String aggregateType, String entityId) {
-    super(String.format("aggregateType: %s, entityId: %s", aggregateType, entityId));
+    super("aggregateType: %s, entityId: %s".formatted(aggregateType, entityId));
   }
 }
